--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <article>
+        <h1>MINHA PÁGINA</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, perspiciatis! Atque, hic modi? Quaerat dicta facere architecto nam? Quod praesentium fugiat cum illum</p>
+        <img src="img/Foto praia.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto adipisci eaque veniam nulla dolore dignissimos ex quidem? Voluptas officia quis ratione! Voluptate numquam sit itaque laudantium ullam quas officiis quis.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia esse illum hic fuga at beatae incidunt! Excepturi praesentium possimus in molestiae nostrum? Mollitia tenetur est delectus ducimus voluptas libero natus?</p>
+    </article>
 </body>
 </html>
