--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <article>
         <h1>MINHA PÁGINA</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, perspiciatis! Atque, hic modi? Quaerat dicta facere architecto nam? Quod praesentium fugiat cum illum</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, perspiciatis! Atque, hic modi? Quaerat dicta facere architecto</p>
         <img src="img/Foto praia.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto adipisci eaque veniam nulla dolore dignissimos ex quidem? Voluptas officia quis ratione! Voluptate numquam sit itaque laudantium ullam quas officiis quis.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia esse illum hic fuga at beatae incidunt! Excepturi praesentium possimus in molestiae nostrum? Mollitia tenetur est delectus ducimus voluptas libero natus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto adipisci eaque veniam nulla dolore dignissimos ex quidem? Voluptas officia quis ratione! Voluptate numquam sit itaque laudantium ullam quas officiis quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ipsam placeat exercitationem libero officia minus veritatis porro facilis, delectus repudiandae rem unde esse reiciendis eveniet non accusantium aut eos! Qui?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia esse illum hic fuga at beatae incidunt! Excepturi praesentium possimus in molestiae nostrum? Mollitia tenetur est delectus ducimus voluptas libero natus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis magni, eaque ad modi possimus voluptate excepturi ipsa cumque ratione. Quasi fugiat aspernatur vero quidem in ipsa cupiditate ratione perferendis porro!</p>
     </article>
 </body>
 </html>
