--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <footer>
+        <section>
+            <h1>Seção 1</h1>
+            <div class="imgarea"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam accusantium maxime molestias aspernatur molestiae mollitia voluptate corporis? Temporibus ullam perspiciatis nesciunt aliquid magnam dolor nostrum velit ratione, maxime ducimus sapiente.</p>
+            <a href="#">Clique aqui!</a>
+        </section>
+     
+
+
+        <section>
+            <h1>Seção 2</h1>
+            <div class="imgarea"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam accusantium maxime molestias aspernatur molestiae mollitia voluptate corporis? Temporibus ullam perspiciatis nesciunt aliquid magnam dolor nostrum velit ratione, maxime ducimus sapiente.</p>
+            <a href="#">Clique aqui!</a>
+        </section>
     
+
+
+        <section>
+            <h1>Seção 3</h1>
+            <div class="imgarea"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam accusantium maxime molestias aspernatur molestiae mollitia voluptate corporis? Temporibus ullam perspiciatis nesciunt aliquid magnam dolor nostrum velit ratione, maxime ducimus sapiente.</p>
+            <a href="#">Clique aqui!</a>
+        </section>
+    </footer>
 </body>
 </html>
