--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Praia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <article>
-        <h1>MINHA PÁGINA</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, perspiciatis! Atque, hic modi? Quaerat dicta facere architecto</p>
+        <h1>Você sabia que ir a praia faz bem a saúde?</h1>
+        <p>Confira abaixo 6 benefícios da praia para a sua saúde:</p>
         <img src="img/Foto praia.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto adipisci eaque veniam nulla dolore dignissimos ex quidem? Voluptas officia quis ratione! Voluptate numquam sit itaque laudantium ullam quas officiis quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ipsam placeat exercitationem libero officia minus veritatis porro facilis, delectus repudiandae rem unde esse reiciendis eveniet non accusantium aut eos! Qui?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia esse illum hic fuga at beatae incidunt! Excepturi praesentium possimus in molestiae nostrum? Mollitia tenetur est delectus ducimus voluptas libero natus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis magni, eaque ad modi possimus voluptate excepturi ipsa cumque ratione. Quasi fugiat aspernatur vero quidem in ipsa cupiditate ratione perferendis porro!</p>
+        <p>Contato com a areia e andar descalço na beira da praia e estar em contato direto com a areia, além de ser muito agradável, estimula as terminações nervosas e os pontos usados na acupuntura. Caminhar ou correr na areia fortalece os músculos que não são tão utilizados quando utilizamos calçados e ainda esfolia as células mortas dos pés, causando bem-estar para o corpo, conectando com a “carga de energia da Terra” e fortalecendo o sistema imunológico do corpo.</p>
+        <p>Estar em contato com o mar e a água salgada traz diversos benefícios para o organismo. Os elementos químicos presentes na água do mar: cloro, sódio, magnésio e iodo, fazem muito bem para a saúde, pois ajudam a evitar alergias, estimulam o sistema respiratório, propiciam relaxamento muscular e ajudam a curar o corpo e desintoxicar. O mar também estimula o combate a infecções, aumenta a função da tireoide e tem efeito calmante sobre os nervos.
+           A água do mar é capaz de melhorar a circulação do corpo e a elasticidade da pele. Nadar em água salgada é benéfico contra a artrite, psoríase e depressão, entre outros males.
+           O azul é a cor que transmite calma. Por isso, olhar para o oceano muda a frequência do cérebro e nos coloca em estado de meditação.</p>
     </article>
 </body>
 </html>
